--- a/index.html
+++ b/index.html
@@ -9361,7 +9361,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20220919190952821" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20221003172708278" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9370,7 +9370,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כשאני תולה כביסה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9390,7 +9390,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220929060758813" title="$:/temp/search">
+<div created="20161023184814872" modified="20221003172820897" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10957,12 +10957,12 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20170926171537258" modified="20200215112154175" tags="[[חיות אוכל]] [[קופים ממונעים]] ארוחות" title="ארוחת ראש השנה">
+<div created="20170926171537258" modified="20221003171318371" tags="[[חיות אוכל]] [[קופים ממונעים]] ארוחות" title="ארוחת ראש השנה">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
 !!![[יויו]]:
 
-ראש השנה התשע&quot;ח היה משהו. כלומר, שבסופו של דבר היה מעולה. גם ההתחלה הייתה אחלה. אבל באמצע, גורה לקתה במרמרת מסויימת. היין שהיא שתתה לא עשה טוב בעניין הזה. ז'נבייב ורוז'ה דיברו על [[המעדנייה|דליקטסן אצל ז'נבייב]] שעומדת להיפתח במקום [[הקוסקוס]]. השניים משוחחים בנחת על חשיבות מקור חומרי הגלם, כי בעצם ז'נבייב רוצה &quot;לעלות כיתה&quot; מהבחינה הזו. בקיצור, גורה נתנה נאום גועלי על &quot;כמה שכולכם נהייתם לי פיינשמעקרים&quot;. היא גם הסתלבטה על אירי ועלי [[והקניידלך|מרק עם קניידלך]]. &quot;כמה תרחיקו לכת? עד לאן תרוצו כדי להשיג סלק בן יומו או סרטן עם טעם של פעם? היא צרחה, קמה והלכה לחדרה. כעבור שעתיים - כשרובינו צופים [[בפרק האחרון|הסוף נשאר פתוח]] של הסופרנוס. מבסוטים על עצמינו. מבושמים מאוכל, שתייה, פינוקים [[והסידרה הסופנית|הסופרנוס]] היא הופיע מביטה בנו. חייכנו אליה כולנו, היא התיישבה בין אווה ופיליפ. היה נפלא א-לה-דובונאז'.
+ראש השנה התשע&quot;ח היה משהו. כלומר, שבסופו של דבר היה מעולה. גם ההתחלה הייתה אחלה. אבל באמצע, גורה לקתה במרמרת מסויימת. היין שהיא שתתה לא עשה טוב בעניין הזה. ז'נבייב ורוז'ה דיברו על [[המעדנייה|דליקטסן אצל ז'נבייב]] שעומדת להיפתח במקום [[הקוסקוס]]. השניים משוחחים בנחת על חשיבות מקור חומרי הגלם, כי בעצם ז'נבייב רוצה &quot;לעלות כיתה&quot; מהבחינה הזו. בקיצור, גורה נתנה נאום גועלי על &quot;כמה שכולכם נהייתם לי פיינשמעקרים&quot;. היא גם הסתלבטה על אירי ועלי [[והקניידלך|מרק עם קניידלך]]. &quot;כמה תרחיקו לכת? עד לאן תרוצו כדי להשיג סלק בן יומו או סרטן עם טעם של פעם? היא צרחה, קמה והלכה לחדרה. כעבור שעתיים - כשרובינו צופים [[בפרק האחרון|הסוף נשאר פתוח]] של הסופרנוס. מבסוטים על עצמינו. מבושמים מאוכל, שתייה, פינוקים [[והסידרה הסופנית|הסופרנוס]] היא הופיע מביטה בנו. חייכנו אליה כולנו, היא התיישבה בין אווה ופיליפ. היה נפלא [[א-לה-דובונאז'|ליל הדובונאז']].
 
 &lt;&lt;englink [[Rosh Hashana dinner]]&gt;&gt;
 
@@ -13050,8 +13050,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20220929061138622" modified="20220929062012449" tags="[[כאן בגטו]]" title="החנות שלנו">
-<pre>
-[img[pictures/ourshop.jpg]]
+<pre>[img[pictures/ourshop.jpg]]
 
 
 
@@ -13565,7 +13564,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161213170938039" modified="20200215114305193" tags="[[המטבח על פי ז'נבייב]] ארוחות [[חיות אוכל]] מסעדות מטבחים" title="הקוסקוס">
+<div created="20161213170938039" modified="20221003172703539" tags="[[המטבח על פי ז'נבייב]] ארוחות [[חיות אוכל]] מסעדות מטבחים משפחות" title="הקוסקוס">
 <pre>[img[pictures/hacouscous.jpg]]
 
 !!![[אלפרד]]:
@@ -13578,9 +13577,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 נכון לעכשיו עובדים שם: [[סוניה]], [[יויו]], [[דןדן]], [[אירי]] [[ודניאל|דניאל]], אך [[גורה]] היא זו שדרכה הכרנו כולנו את [[ז'נבייב]].
 גם אותי גורה לקחה [[לאכול|המטבח על פי ז'נבייב]] שם בתקופה שהיינו יחד.
 
-את האוכל מקבלים [[בקערות קרמיקה|חומרים]], שז'נבייב אוספת כבר שנים, ולאחר שמסיימים אותו, נשארים רוויי נחת, ומלקקים את השפתיים משך כל היום כדי להיזכר בטעם.
+את האוכל מקבלים [[בקערות קרמיקה|חומרים]], שז'נבייב אוספת, ולאחר שמסיימים אותו, נשארים רוויי נחת, ומלקקים את השפתיים משך כל היום כדי להיזכר בטעם.
 
-בתקופה הלא ארוכה במיוחד בה [[כולנו מכירים את כולנו|האחיות כהן]], ז'נבייב [[ואבי|ג'וזף אברואה]] הפכו לזוג אוהבים, כך ש[[במשק האוטרקי שלנו|המשק האוטרקי שלנו]], לא רק שיש גם מסעדה, יש לי אימא חורגת מהסוג שאין באגדות.
+בתקופה הלא ארוכה במיוחד בה [[כולנו מכירים את כולנו|האחיות כהן]], ז'נבייב [[ואבי|ג'וזף אברואה]] הפכו לזוג אוהבים, כך ש[[במשק האוטרקי שלנו|המשק האוטרקי שלנו]], לא רק שיש גם מסעדה, יש לי אימא חורגת מהסוג [[שאין באגדות|אימא מהאגדות]].
 
 
 
@@ -16276,14 +16275,14 @@ We rise to play a greater part.
 &lt;&lt;englink [[Down there]]&gt;&gt;
 </pre>
 </div>
-<div created="20220919072930887" modified="20220921062638724" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]]" title="למשל במאפייה">
+<div created="20220919072930887" modified="20221003164400312" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]]" title="למשל במאפייה">
 <pre>[img[pictures/atthebakery.jpg]]
 
 [[אימא של ג'אז]]:
 
 המאפייה הייתה, למשל, יכולה להיות די והותר סיפורים לכמה עונות של [[סידרת|סדרות]] דרמה הכי כייפית ונוגעת ללב כאחד. היא אפילו יכלה להיות סידרה מעולה אם הייתה נכתבת ומבויימת ומצולמת וערוכה היטב והיה לה גם פס קול נהדר וצוות שחקנים נפלא.
 
-[[אחרי ש|המעבדה]]כבר לא הייתה לי יותר מאפייה, כתבתי טקסט ארוך למדי שקראתי לו &quot;למשל במאפייה&quot;, זה היה ב-2002, בתקופה בה גם החלטתי שאני [[אווה כהן||אווה]], קונדיטורית הונגריה ואחותם של [[איתן וג'ואל כהן]], (ממש כמו [[יויו]]). 
+[[אחרי ש|המעבדה]]כבר לא הייתה לי יותר מאפייה, כתבתי טקסט ארוך למדי שקראתי לו &quot;למשל במאפייה&quot;, זה היה ב-2002, בתקופה בה גם החלטתי שאני [[אווה כהן|אווה]], קונדיטורית הונגריה ואחותם של [[איתן וג'ואל כהן]], (ממש כמו [[יויו]]). 
 הטקסט היה למעשה סוג של התחלת מחשבותיי על טקסט [[וויקי|https://en.wikipedia.org/wiki/Wiki]] והיו מסומנים בו שמות של מקומות, אנשים, מתכונים ועוד, במטרה שייפתחו עוד ועוד עולמות, כמו [[שכאן|האחיות כהן]].
 
 רציתי לספר על כל עובדת, על השולחנות, על הקשרים והתופעות. הטקסט הזה הלך לאיבוד עם הארד דיסק שנדפק לפני כמה שנים, אני לא מתכוונת בשלב הזה לנסות ולשחזר אותו, אך אני כן מצהירה בזאת, ספטמבר 2022 סוף ה'תשפ&quot;ב, שאני רוצה להתחיל ולהיזכר במאפייה הקסומה שהייתה לי ושתמיד היא זיכרון מתוק.
@@ -17380,7 +17379,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Orange soup]]&gt;&gt;</pre>
 </div>
-<div created="20170924155536957" modified="20200219181058042" tags="[[חיות אוכל]] מתכונים" title="מרק עם קניידלך">
+<div created="20170924155536957" modified="20221003172146449" tags="[[חיות אוכל]] מתכונים" title="מרק עם קניידלך">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 !!![[יויו]]:
@@ -17401,11 +17400,11 @@ We rise to play a greater part.
 * שורש פטרוזיליה
 * מלח
 *  פלפל שחור
-*  צרור פטרוזיליה לקישוט
+*  צרור פטרוזיליה
 
 אופן ההכנה:
 
-1. מקלפי את הגזר ואת תפוח האדמה, מנקים ושוטפים את שאר הירקות, מכניסים לסיר  בינוני ומוסיפים שני ליטר מים.
+1. מקלפים את הגזר ואת תפוח האדמה, מנקים ושוטפים את שאר הירקות, מכניסים לסיר  בינוני ומוסיפים שני ליטר מים.
 
 2. מבשלים עם כפית מלח וכפית פלפל שעה וחצי על אש נמוכה.
 
@@ -17413,7 +17412,7 @@ We rise to play a greater part.
 
 4. מסננים את המרק המקורר, את הירקות שאוהבים לאכול מחזירים למרק, ומבשלים שוב בסיר נקי עם 2 ליטר מים נוספים.
 
-5. כשהוא רותח טועמים ומוסיפים תבלינים.
+5. כשהוא חם טועמים ומוסיפים תבלינים.
 
 
 מכינים את הקניידלך:
@@ -17422,7 +17421,7 @@ We rise to play a greater part.
 
 2. מתחילים להוסיף מים (בכל פעם כף), וממשיכים לערבב - עד לעיסה רכה אך בצקית.
 
-3. מניחים לתערובת, ואחרי עשר דקות בודקים - יש להניח שהיא התקשתה, ואם אכן כך, מוסיפים עוד מעט מים ומערבבים. חוזרים על הפעולה הזו שלוש-ארבע פעמים, ובפעם האחרונה מוסיפים חצי כפית אבקת אפיה.
+3. מניחים לתערובת, ואחרי עשר דקות בודקים - יש להניח שהיא התקשתה, ואם אכן כך, מוסיפים עוד מעט מים ומערבבים. חוזרים על הפעולה הזו שלוש-ארבע פעמים, ובפעם האחרונה מוסיפים רבע כפית אבקת אפיה ונותנים לתערובת &quot;לעמוד&quot; עוד כמה דקות.
 
 4. מגלגלים כדורים ומכניסים אותם למרק על להבה בינונית.
 
@@ -17432,7 +17431,7 @@ We rise to play a greater part.
 
 אני יודע שזה נשמע מרק אנמי, אבל ירקות טובים אורגני-בלאדי-טרי, מלח ים גס, פלפל שחור גרוס, הם מלאי טעם [[ואין צורך ביותר|less is more]].
 
-את המרק מגישים כשהוא חם, מקושט בעלי פטרוזילה טריים.
+את המרק מגישים כשהוא חם, מקושט בעלי פטרוזילה טריים למי שרוצה.
 
 &lt;&lt;englink [[Matza ball soup]]&gt;&gt;</pre>
 </div>
