glam plus was waiting

--- a/index.html
+++ b/index.html
@@ -527,6 +527,8 @@ Error message and password prompt
 
 <li>גינת קריית ספר</li>
 
+<li>גלאם</li>
+
 <li>גלגולים</li>
 
 <li>גלות</li>
@@ -752,6 +754,8 @@ Error message and password prompt
 <li>חזרת</li>
 
 <li>חיות אוכל</li>
+
+<li>חיכה לי</li>
 
 <li>חינאווי</li>
 
@@ -10869,7 +10873,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220929061436210" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20221226085345982" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12141,6 +12145,16 @@ Is where I want to be
 
 &lt;&lt;englink [[Kiryat Sefer Park]]&gt;&gt;
 </pre>
+</div>
+<div created="20221226084451771" modified="20221226090813119" tags="בתים מוזיקה [[כאן בגטו]]" title="גלאם">
+<pre>[img[pictures/glam.jpg]]
+
+[[אימא של ג'אז]]:
+
+יש ימים כאלה שהם גלימים במיוחד.
+
+
+&lt;&lt;englink [[Glam]]&gt;&gt;</pre>
 </div>
 <div created="20180109154156686" modified="20200513150308758" tags="[[אירי טוענת]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים [[סיפורים מהעתיד]]" title="גלגולים">
 <pre>[img[pictures/gilgulim.jpg]]
@@ -13950,6 +13964,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;englink [[Food addicts]]&gt;&gt;</pre>
+</div>
+<div created="20221226085012694" modified="20221226090824301" tags="אפייה מטבחים [[חיות אוכל]] חבר [[כאן בגטו]]" title="חיכה לי">
+<pre>[img[pictures/waswaitingforme.jpg]]
+
+[[אימא של ג'אז]:
+
+בבקר לפני שיצאתי לחנות הוצאתי את המיקסר מהארון, והכנתי שני בצקים פריכים. השארתי אותו על השיש להמשך הכנות שאעשה בערב. הוא חיכה לי כל היום.
+
+&lt;&lt;englink [[Was waiting for me]]&gt;&gt;</pre>
 </div>
 <div created="20180715130735407" modified="20200226063947902" tags="[[כאן בגטו]] [[חיות אוכל]] מטבחים" title="חינאווי">
 <pre>[img[pictures/hinawi.jpg]]
