--- a/english.html
+++ b/english.html
@@ -595,6 +595,8 @@ Error message and password prompt
 
 <li>Gili's kiosk</li>
 
+<li>Glam</li>
+
 <li>Glasses from Zara Home</li>
 
 <li>Grape leaves</li>
@@ -1304,6 +1306,8 @@ Error message and password prompt
 <li>Villa Maroc</li>
 
 <li>Vincent Van Gogh</li>
+
+<li>Was waiting for me</li>
 
 <li>Washing the grinder</li>
 
@@ -9282,7 +9286,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Rosh Hashana dinner]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Was waiting for me]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11666,7 +11670,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220929061339061" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20221226085306863" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11956,6 +11960,12 @@ I know wonderful Gili since the time when there was a branch of [[Reviva and Cel
 
 
  &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
+</div>
+<div created="20221226084727659" modified="20221226090857090" tags="Houses Music [[Here in the Ghetto]]" title="Glam">
+<pre>[img[pictures/glam.jpg]]
+
+
+ &lt;&lt;heblink [[גלאם]]&gt;&gt;</pre>
 </div>
 <div created="20211107164208509" modified="20211107164442867" tags="Kitchens [[Food addicts]] [[On the road to somewhere]]" title="Glasses from Zara Home">
 <pre>[img[pictures/glassesfromzarahome.jpg]]
@@ -14252,8 +14262,7 @@ This will always be a mystery, even though that are some options for solutions, 
 </pre>
 </div>
 <div created="20220929061254873" modified="20220929061401168" tags="[[Here in the Ghetto]]" title="Our shop">
-<pre>
-[img[pictures/ourshop.jpg]]
+<pre>[img[pictures/ourshop.jpg]]
 
 
 
@@ -16994,6 +17003,13 @@ If I need anything, I message friends on [[Etherpad|https://etherpad.org/]].
 
 
  &lt;&lt;heblink [[וינסנט ואן-גוך]]&gt;&gt;</pre>
+</div>
+<div created="20221226085207933" modified="20221226090911156" tags="Kitchens [[Food addicts]] Baking [[A friend]] [[Here in the Ghetto]]" title="Was waiting for me">
+<pre>[img[pictures/waswaitingforme.jpg]]
+
+
+
+ &lt;&lt;heblink [[חיכה לי]]&gt;&gt;</pre>
 </div>
 <div created="20210223112454456" modified="20210223113659846" tags="Laundry [[Here in the Ghetto]] Kitchens Houses [[Life is for those who can't deal with drugs]] Recipes" title="Washing the grinder">
 <pre>[img[pictures/washingthegrinder.jpg]]
