--- a/english.html
+++ b/english.html
@@ -1235,6 +1235,8 @@ Error message and password prompt
 
 <li>The team</li>
 
+<li>The tidy closet</li>
+
 <li>The Valhalla Murders</li>
 
 <li>The Wire</li>
@@ -9286,7 +9288,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Was waiting for me]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The tidy closet]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11670,7 +11672,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20221226085306863" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20230119090053493" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -16558,6 +16560,13 @@ The team is us, who live in the renovated rental contract [[apartment|Wishing st
 
 
 </pre>
+</div>
+<div created="20230119085945249" modified="20230119092601551" tags="Houses [[On the road to somewhere]] [[True stories]]" title="The tidy closet">
+<pre>
+[img[pictures/thetidycloset.jpg]]
+
+
+ &lt;&lt;heblink [[הארון המסודר]]&gt;&gt;</pre>
 </div>
 <div created="20210225195424357" modified="20210225200006443" tags="Families Children [[TV Series]] TV [[Monkeys with car keys]]" title="The Valhalla Murders">
 <pre>[img[pictures/TheValhallaMurders.jpg]]
