--- a/index.html
+++ b/index.html
@@ -607,6 +607,8 @@ Error message and password prompt
 
 <li>הארבעה 2</li>
 
+<li>הארון המסודר</li>
+
 <li>הארי דין סטנטון</li>
 
 <li>הבריסטות שכאן</li>
@@ -9374,7 +9376,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הארון המסודר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9394,7 +9396,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20221003172820897" title="$:/temp/search">
+<div created="20161023184814872" modified="20230119085502996" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10873,7 +10875,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20221226085345982" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20230119090158613" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -11178,7 +11180,7 @@ Is where I want to be
 &lt;&lt;englink [[Belinda]]&gt;&gt;
 </pre>
 </div>
-<div created="20170701112743899" modified="20200813153601897" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="בצק פריך">
+<div created="20170701112743899" modified="20230119085505874" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="בצק פריך">
 <pre>[img[pictures/b-parich.jpg]]
 
 !!![[אווה|אווה כהן]]:
@@ -12688,7 +12690,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20221102091248693" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20221227182202343" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -12807,6 +12809,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 &lt;&lt;englink [[HaAarba`a 2]]&gt;&gt;
+</pre>
+</div>
+<div created="20230119085627209" modified="20230119092538845" tags="בתים [[בדרך לאן שהוא]] [[סיפורים אמיתיים]]" title="הארון המסודר">
+<pre>[img[pictures/thetidycloset.jpg]]
+
+
+&lt;&lt;englink [[The tidy closet]]&gt;&gt;
 </pre>
 </div>
 <div created="20170918121843399" modified="20200513150518106" tags="[[אחיות חוץ]] סרטים [[סיפורים מהעתיד]]" title="הארי דין סטנטון">
