--- a/english.html
+++ b/english.html
@@ -857,6 +857,8 @@ Error message and password prompt
 
 <li>Merkaz Ba'alei Melaha 6</li>
 
+<li>Merry February</li>
+
 <li>Metafiction</li>
 
 <li>Metamorphosis</li>
@@ -9288,7 +9290,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The tidy closet]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Merry February]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11672,7 +11674,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20230119090053493" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20230207061413559" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13713,6 +13715,15 @@ This generation is carrying on his back generations and generations of unconscio
 
  &lt;&lt;heblink [[מרכז בעלי מלאכה 6]]&gt;&gt;
 </pre>
+</div>
+<div created="20230207061211790" modified="20230207061437486" tags="Houses Kitchens [[Monkeys with car keys]]" title="Merry February">
+<pre>
+
+[img[pictures/merryfebruary.jpg]]
+
+
+
+ &lt;&lt;heblink [[פברואר השמח]]&gt;&gt;</pre>
 </div>
 <div created="20200212160436198" modified="20200725181305545" tags="[[True stories]] Films [[The global village]] Closers" title="Metafiction">
 <pre>[img[pictures/meta-fiction.jpg]]
@@ -16562,8 +16573,7 @@ The team is us, who live in the renovated rental contract [[apartment|Wishing st
 </pre>
 </div>
 <div created="20230119085945249" modified="20230119092601551" tags="Houses [[On the road to somewhere]] [[True stories]]" title="The tidy closet">
-<pre>
-[img[pictures/thetidycloset.jpg]]
+<pre>[img[pictures/thetidycloset.jpg]]
 
 
  &lt;&lt;heblink [[הארון המסודר]]&gt;&gt;</pre>
