--- a/index.html
+++ b/index.html
@@ -1331,6 +1331,8 @@ Error message and password prompt
 
 <li>פבלובה</li>
 
+<li>פברואר השמח</li>
+
 <li>פדרו אלמודובר</li>
 
 <li>פה</li>
@@ -9376,7 +9378,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הארון המסודר]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פברואר השמח]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9396,7 +9398,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230119085502996" title="$:/temp/search">
+<div created="20161023184814872" modified="20230206190259138" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10875,7 +10877,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230119090158613" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20230207061519522" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -19529,6 +19531,14 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Pavlova]]&gt;&gt;
 </pre>
+</div>
+<div created="20230207060925090" modified="20230207061547069" tags="אפייה בתים [[קופים ממונעים]]" title="פברואר השמח">
+<pre>
+[img[pictures/merryfebruary.jpg]]
+
+
+
+&lt;&lt;englink [[Merry February]]&gt;&gt;</pre>
 </div>
 <div created="20180201131829444" modified="20200324164703442" tags="[[אחיות חוץ]] אימהות סרטים [[האנקי דורי]]" title="פדרו אלמודובר">
 <pre>[img[pictures/pedro-almodovar.jpg]]
