--- a/english.html
+++ b/english.html
@@ -9290,7 +9290,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Merry February]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13717,9 +13717,7 @@ This generation is carrying on his back generations and generations of unconscio
 </pre>
 </div>
 <div created="20230207061211790" modified="20230207061437486" tags="Houses Kitchens [[Monkeys with car keys]]" title="Merry February">
-<pre>
-
-[img[pictures/merryfebruary.jpg]]
+<pre>[img[pictures/merryfebruary.jpg]]
 
 
 
