--- a/index.html
+++ b/index.html
@@ -9378,7 +9378,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="חבר [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13828,7 +13828,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180814103316187" modified="20230325142011538" tags="סרטים" title="חבר">
+<div created="20180814103316187" modified="20230325180609216" tags="סרטים" title="חבר">
 <pre>[img[pictures/friend.jpg]]
 
 
