--- a/english.html
+++ b/english.html
@@ -9310,7 +9310,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20221003172859213" title="$:/temp/search">
+<div created="20161023184814872" modified="20230325181719085" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9565,13 +9565,13 @@ With the assistance of the code she has transplanted in my father, in me and in 
  &lt;&lt;heblink [[משפחה מהסדרות]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212200933944" modified="20200501131544944" tags="Films [[Life is for those who can't deal with drugs]]" title="A friend">
+<div created="20200212200933944" modified="20230325181739935" tags="Films [[Life is for those who can't deal with drugs]]" title="A friend">
 <pre>[img[pictures/friend.jpg]]
 
 
 !!![[Yoyo]]:
 
-A friend loves you despite of what you are, a friend loves you even when you play it smart, a friend loves you also when you are totally stuck, a friend loves you even when you are fucked up, a friend loves  you also on Friday night.
+A friend 
 
 (Gura drew [[this|https://3.bp.blogspot.com/-ofciR9wlEuQ/WqsF9UH5O2I/AAAAAAAAr4w/ZUUJCbtouXcVXwE3IR9xUPk_qWSdjKZmwCEwYBhgL/s1600/career%2Bgirls00002.png]] drawing out of the wonderful movie [[Career Girls|https://www.imdb.com/title/tt0118818/]] by the sister [[Mike Leigh]])
 
