--- a/index.html
+++ b/index.html
@@ -13828,7 +13828,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180814103316187" modified="20230325180609216" tags="סרטים" title="חבר">
+<div created="20180814103316187" modified="20230325181637660" tags="סרטים" title="חבר">
 <pre>[img[pictures/friend.jpg]]
 
 
@@ -13836,7 +13836,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!![[יויו]]:
 
-חבר אוהב אותך למרות מה שאתה, חבר אוהב אותך גם כשאתה מוצלח, חבר אוהב אותך גם כשאתה במצב, חבר אוהב אותך גם כשאתה מחופף, חבר אוהב אותך גם ביום שבת. 
+חבר 
 
 
 
