--- a/english.html
+++ b/english.html
@@ -9290,7 +9290,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The tidy closet]] [[A friend]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The tidy closet]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16570,7 +16570,7 @@ The team is us, who live in the renovated rental contract [[apartment|Wishing st
 
 </pre>
 </div>
-<div created="20230119085945249" modified="20230326122630513" tags="Houses [[On the road to somewhere]] [[True stories]]" title="The tidy closet">
+<div created="20230119085945249" modified="20230330124827954" tags="Houses [[On the road to somewhere]] [[True stories]]" title="The tidy closet">
 <pre>[img[pictures/thetidycloset.jpg]]
 
 
