--- a/index.html
+++ b/index.html
@@ -19532,12 +19532,12 @@ __אופן ההכנה____
 &lt;&lt;englink [[Pavlova]]&gt;&gt;
 </pre>
 </div>
-<div created="20230207060925090" modified="20230330133430313" tags="אפייה בתים [[קופים ממונעים]]" title="פברואר השמח">
+<div created="20230207060925090" modified="20230330133622980" tags="אפייה בתים [[קופים ממונעים]]" title="פברואר השמח">
 <pre>[img[pictures/merryfebruary.jpg]]
 
 [[אימא של ג'אז]]:
 
-את פברואר השמח התחלנו לחגוג ב2022, לזכר ארועי פברואר 2002.
+את פברואר השמח התחלנו לחגוג ב2022, לזכר ארועי פברואר 2002. ה
 
 
 
