--- a/index.html
+++ b/index.html
@@ -9378,7 +9378,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פברואר השמח]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -19532,12 +19532,12 @@ __אופן ההכנה____
 &lt;&lt;englink [[Pavlova]]&gt;&gt;
 </pre>
 </div>
-<div created="20230207060925090" modified="20230330133622980" tags="אפייה בתים [[קופים ממונעים]]" title="פברואר השמח">
+<div created="20230207060925090" modified="20230330134040449" tags="אפייה בתים [[קופים ממונעים]]" title="פברואר השמח">
 <pre>[img[pictures/merryfebruary.jpg]]
 
 [[אימא של ג'אז]]:
 
-את פברואר השמח התחלנו לחגוג ב2022, לזכר ארועי פברואר 2002. ה
+את פברואר השמח התחלנו לחגוג ב2022, לזכר ארועי פברואר 2002. 
 
 
 
