--- a/english.html
+++ b/english.html
@@ -9281,7 +9281,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200910133513925" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20211230105736585" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230410154347128" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9290,7 +9290,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The tidy closet]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Social skills]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9310,7 +9310,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230325181719085" title="$:/temp/search">
+<div created="20161023184814872" modified="20230410154229755" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15326,7 +15326,7 @@ In an initiated and planned way, up until now [[we didn’t mention here|Coen si
  &lt;&lt;heblink [[טלפון חכם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226110213394" modified="20200304130546948" tags="[[Monkeys with car keys]] [[On the road to somewhere]]" title="Social skills">
+<div created="20200226110213394" modified="20230410154354002" tags="[[Monkeys with car keys]] [[On the road to somewhere]]" title="Social skills">
 <pre>[img[pictures/kishurim.jpg]]
 
 
@@ -15336,7 +15336,7 @@ Since all of us are at-risk youth on the asperger spectrum, [[among other things
 
 A basic first answer is: &quot;I'll think about it&quot;.
 
- In the apartment renovation period, this sentence has become an idiomatic phrase among us.   
+ In the [[apartment|Wishing star 01]] renovation period, this sentence has become an idiomatic phrase among us.   
 
 
 
