--- a/index.html
+++ b/index.html
@@ -9369,7 +9369,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20221003172708278" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230410153932326" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9378,7 +9378,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כישורים חברתיים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9398,7 +9398,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230325141844852" title="$:/temp/search">
+<div created="20161023184814872" modified="20230410153746863" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11182,7 +11182,7 @@ Is where I want to be
 &lt;&lt;englink [[Belinda]]&gt;&gt;
 </pre>
 </div>
-<div created="20170701112743899" modified="20230119085505874" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="בצק פריך">
+<div created="20170701112743899" modified="20230406134135151" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="בצק פריך">
 <pre>[img[pictures/b-parich.jpg]]
 
 !!![[אווה|אווה כהן]]:
@@ -11199,7 +11199,7 @@ Is where I want to be
 
 ככל שהבצק יהיה עשיר ושומני כך יהיה קשה לעיבוד - כלומר - דביק יותר.
 
-עיבוד קצר וקור הם שני תנאים חשובים להצלחתו, ולכן, אם משטחים את הבצק ולא מרדדים, כדאי לקחת חתיכות לא גדולות, ובמהירות, עדינות ומינימום של שימוש בעוד קמח, משטחים למשטח אחיד.
+עיבוד קצר וקור הם שני תנאים בסיסיים להצלחתו, ולכן, אם משטחים את הבצק ולא מרדדים, כדאי לקחת חתיכות לא גדולות, ובמהירות, עדינות ומינימום של שימוש בעוד קמח, משטחים למשטח אחיד.
 
 באופן אישי, לרוב, אני משתמשת בבצק פריך למאפים מתוקים - אך כמובן שגם לפאי או [[עוגיות מלוחות|עוגיות קימל]] הם מצויינים.
 
@@ -11214,8 +11214,8 @@ Is where I want to be
 * כף סוכר וניל
 * 2 כפות חלב
 * ביצה+חלמון
-* 2 כוסות ו 2/3 כוס קמח
-* כפית אבקת אפיה
+* 2 כוסות+ 1/3 כוס קמח
+* כפית (שטוחה) אבקת אפיה
 *קורט מלח
 
 במעבד מזון :
@@ -15375,14 +15375,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Psychodiagnostic Chirology]]&gt;&gt;</pre>
 </div>
-<div created="20171210210308490" modified="20200226110418525" tags="[[קופים ממונעים]] [[בדרך לאן שהוא]]" title="כישורים חברתיים">
+<div created="20171210210308490" modified="20230410153929836" tags="[[קופים ממונעים]] [[בדרך לאן שהוא]]" title="כישורים חברתיים">
 <pre>[img[pictures/kishurim.jpg]]
 
 !!![[יויו]]:
 
 מאחר שאנחנו כולנו, [[בין השאר|על הספקטרום]], נוער בסיכון על הרצף האספרגריסטי, אנחנו לומדים יחדיו כיצד להתמודד עם מצבים בלתי צפויים בחיים, כמו שאלות שמשאירות אותך הלום. 
 
-תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.
+תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ [[הדירה|כוכב המשאלות 01]], הפך למטבע לשון אצלנו.
 
 
 
