--- a/index.html
+++ b/index.html
@@ -9378,7 +9378,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כישורים חברתיים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="שואה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9398,7 +9398,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230410153746863" title="$:/temp/search">
+<div created="20161023184814872" modified="20230419202514853" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -20992,14 +20992,14 @@ Fapina''
 &lt;&lt;englink [[Chez Panisse]]&gt;&gt;
 </pre>
 </div>
-<div created="20161219172718131" modified="20210228154058440" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
+<div created="20161219172718131" modified="20230419202648111" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
 <pre>[img[pictures/shoa.jpg]]
 
 
 !!![[הצוות]]:
 
 
-כל שואה לגופה, אבל ישנה השואה.
+כל שואה לגופה.
 
 
 
