--- a/index.html
+++ b/index.html
@@ -1033,6 +1033,8 @@ Error message and password prompt
 
 <li>לקשקש בשולי הדף</li>
 
+<li>מאבקי</li>
+
 <li>מאיר אריאל</li>
 
 <li>מאכילים את המצפון</li>
@@ -9369,7 +9371,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20230410153932326" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230508183203524" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9378,7 +9380,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="שואה [[האחיות כהן]]" title="$:/StoryList">
+<div list="מאבקי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9398,7 +9400,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230419202514853" title="$:/temp/search">
+<div created="20161023184814872" modified="20230508182715145" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10877,7 +10879,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230207061519522" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20230508183220477" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16414,6 +16416,17 @@ We rise to play a greater part.
 ''האם מותר לכם לפרסם את הגירסה החדשה שלכם ברשת?''
 כן, במסגרת תנאי הרשיון (לפרטים, לחצו על ה&lt;img alt=&quot;Creative Commons License&quot; style=&quot;width:44px; border-width:0&quot; src=&quot;https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png&quot;&gt; בצד ימין למטה)</pre>
 </div>
+<div created="20230508181939847" modified="20230508183339944" tags="בתים משפחות [[בדרך לאן שהוא]] [[סיפורים אמיתיים]] סגירים" title="מאבקי">
+<pre>
+[img[pictures/meinkampf.jpg]]
+
+!!![[יויו]]:
+
+אני קורא עכשיו את החלק השני של החלק השישי של &quot;מאבקי&quot;, שכתב [[קרל אובה קנאוסגורד]]. זה משפיע עלי. עדיין קורא. [[גורה]] כבר קראה.
+
+
+&lt;&lt;englink [[Mein Kampf]]&gt;&gt;</pre>
+</div>
 <div created="20170328175210280" modified="20200614090613617" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]] [[האנקי דורי]] [[סיפורים מהעתיד]]" title="מאיר אריאל">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
@@ -20992,7 +21005,7 @@ Fapina''
 &lt;&lt;englink [[Chez Panisse]]&gt;&gt;
 </pre>
 </div>
-<div created="20161219172718131" modified="20230419202648111" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
+<div created="20161219172718131" modified="20230508182129450" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
 <pre>[img[pictures/shoa.jpg]]
 
 
