--- a/english.html
+++ b/english.html
@@ -849,6 +849,8 @@ Error message and password prompt
 
 <li>Meals</li>
 
+<li>Mein Kampf</li>
+
 <li>Meir Ariel</li>
 
 <li>Menopause sisters</li>
@@ -9290,7 +9292,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Social skills]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Mein Kampf]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11674,7 +11676,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20230207061413559" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20230508183047003" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13658,6 +13660,15 @@ I love the harmony between the food species in a meal, and most important, a mea
 &lt;&lt;list-links filter:&quot;[tag[Meals]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[ארוחות]]&gt;&gt;</pre>
+</div>
+<div created="20230508182815902" modified="20230508183115958" tags="Families Houses Closers [[True stories]] [[On the road to somewhere]]" title="Mein Kampf">
+<pre>
+[img[pictures/meinkampf.jpg]]
+
+
+
+ &lt;&lt;heblink [[מאבקי]]&gt;&gt;
+</pre>
 </div>
 <div created="20200202175811447" modified="20200614090649092" tags="[[Outer sisters]] Music [[Hunky Dory]] [[Stories from the future]]" title="Meir Ariel">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
