--- a/english.html
+++ b/english.html
@@ -507,6 +507,8 @@ Error message and password prompt
 
 <li>Downton Abbey</li>
 
+<li>Draft of 'Mein Kampf'</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Drinking with Gura</li>
@@ -9283,7 +9285,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200910133513925" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20230410154347128" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230510150212312" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9292,7 +9294,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Mein Kampf]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9312,7 +9314,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230410154229755" title="$:/temp/search">
+<div created="20161023184814872" modified="20230510151109518" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10521,7 +10523,7 @@ The CDs store is at the first floor of [[Gesund-Heights]]. It belongs to [[Shalo
  &lt;&lt;heblink [[חנות דיסקים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200225184705256" modified="20200531074705151" tags="[[Coen sister]]" title="Chan">
+<div created="20200225184705256" modified="20230510151145216" tags="[[Coen sister]] Families [[On the road to somewhere]]" title="Chan">
 <pre>[img[pictures/chan.jpg]]
 
 
@@ -11352,6 +11354,14 @@ She and the hairdresser are the responsible adults in this story.
 
 
  &lt;&lt;heblink [[אחוזת דאונטון]]&gt;&gt;
+</pre>
+</div>
+<div created="20230508182815902" draft.of="Mein Kampf" draft.title="Mein Kampf" modified="20230510150206020" tags="Families Houses Closers [[True stories]] [[On the road to somewhere]]" title="Draft of 'Mein Kampf'">
+<pre>[img[pictures/meinkampf.jpg]]
+
+[[Karl Ove Knausgard]]
+
+ &lt;&lt;heblink [[מאבקי]]&gt;&gt;
 </pre>
 </div>
 <div created="20200202160144751" modified="20200810181155806" tags="[[The team]] Children" title="Dreams that we've dreamt">
@@ -13662,8 +13672,7 @@ I love the harmony between the food species in a meal, and most important, a mea
  &lt;&lt;heblink [[ארוחות]]&gt;&gt;</pre>
 </div>
 <div created="20230508182815902" modified="20230508183115958" tags="Families Houses Closers [[True stories]] [[On the road to somewhere]]" title="Mein Kampf">
-<pre>
-[img[pictures/meinkampf.jpg]]
+<pre>[img[pictures/meinkampf.jpg]]
 
 
 
