--- a/index.html
+++ b/index.html
@@ -577,6 +577,8 @@ Error message and password prompt
 
 <li>דןדן</li>
 
+<li>דןדן חזר</li>
+
 <li>דןדן נסע</li>
 
 <li>דניאל</li>
@@ -9380,7 +9382,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דןדן חזר]] דןדן [[דןדן נסע]] הכתיבה [[שה פניס]] [[בבית של פיני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9400,7 +9402,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230511175444659" title="$:/temp/search">
+<div created="20161023184814872" modified="20230512181903954" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10879,7 +10881,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230508183220477" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20230513210943117" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12566,6 +12568,17 @@ different tastes, but there were things we both love: family, work, people in al
 
 
 &lt;&lt;englink [[Dandan]]&gt;&gt;
+</pre>
+</div>
+<div created="20230513210112181" modified="20230513211010454" tags="[[דןדן נסע]] בתים משפחות" title="דןדן חזר">
+<pre>
+[img[pictures/dandanisback.jpg]]
+
+
+
+
+&lt;&lt;englink [[Dandan is back]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20170112183255462" modified="20230511180409119" tags="[[סיפורים אמיתיים]] בתים אימהות [[בדרך לאן שהוא]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="דןדן נסע">
