--- a/index.html
+++ b/index.html
@@ -9402,7 +9402,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230512181903954" title="$:/temp/search">
+<div created="20161023184814872" modified="20230513212447997" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12570,11 +12570,15 @@ different tastes, but there were things we both love: family, work, people in al
 &lt;&lt;englink [[Dandan]]&gt;&gt;
 </pre>
 </div>
-<div created="20230513210112181" modified="20230513211010454" tags="[[דןדן נסע]] בתים משפחות" title="דןדן חזר">
+<div created="20230513210112181" modified="20230513212922571" tags="[[דןדן נסע]] בתים משפחות" title="דןדן חזר">
 <pre>
 [img[pictures/dandanisback.jpg]]
 
+!!![[גורה]]:
 
+לא ראינו את דןדן למעלה מ6! שנים.
+לפני חודש קיבלתי ממנו מייל בו הוא מספר, בנימוס רב, ושואל אם זה בסדר שהוא יבוא לבקר בקרוב. אמרתי לו שזה בסדר.  
+לפני יומיים הוא הגיע, הוחלט כי אני אהיה זו שתפתח לו את הדלת, הוא לבש סווטשירט כמו [[בקופנהגן קאובוי|https://www.lemonde.fr/en/culture/article/2023/01/05/in-copenhagen-cowboy-nicolas-winding-refn-creates-an-enigmatic-superheroine_6010366_30.html]], עמדתי כמו קלוצית, הוא היה נבוך וחייך, התחבקנו רגע והמשכנו פנימה כי כולם כבר חיכו לו.
 
 
 &lt;&lt;englink [[Dandan is back]]&gt;&gt;
