--- a/index.html
+++ b/index.html
@@ -785,6 +785,8 @@ Error message and password prompt
 
 <li>טארט טאטן</li>
 
+<li>טבחים הם רקדנים</li>
+
 <li>טבע עירוני</li>
 
 <li>טוטם</li>
@@ -9382,7 +9384,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דןדן חזר]] דןדן [[דןדן נסע]] הכתיבה [[שה פניס]] [[בבית של פיני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="אפייה [[טבחים הם רקדנים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9402,7 +9404,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230513212447997" title="$:/temp/search">
+<div created="20161023184814872" modified="20230518182813372" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10881,7 +10883,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230513210943117" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20230520112844108" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -14211,6 +14213,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;englink [[Tarte tatin]]&gt;&gt;</pre>
+</div>
+<div created="20230520112241255" modified="20230520112840099" tags="[[חיות אוכל]] מטבחים אפייה חלונות" title="טבחים הם רקדנים">
+<pre>
+[img[pictures/cooksaredancers.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[טבחים הם רקדנים]]&quot;&gt;&gt;
+
+
+
+&lt;&lt;englink [[Cooks are dancers]]&gt;&gt;
+</pre>
 </div>
 <div created="20190404183713312" modified="20200503153318241" tags="[[כאן בגטו]] מוזיקה [[סיפורים אמיתיים]] חלונות" title="טבע עירוני">
 <pre>[img[pictures/zirey-kaitz.jpg]]
