--- a/english.html
+++ b/english.html
@@ -457,6 +457,8 @@ Error message and password prompt
 
 <li>Comprehensive or compulsive</li>
 
+<li>Cooks are dancers</li>
+
 <li>Corona beings</li>
 
 <li>Couscous</li>
@@ -9296,7 +9298,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Dandan is back]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Cooks are dancers]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11019,6 +11021,20 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
  &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
 </div>
+<div created="20230520112454587" modified="20230520112710869" tags="Kitchens Baking [[Food addicts]]" title="Cooks are dancers">
+<pre>
+[img[pictures/cooksaredancers.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Cooks are dancers]]&quot;&gt;&gt;
+
+
+
+
+ &lt;&lt;heblink [[טבחים הם רקדנים]]&gt;&gt;
+</pre>
+</div>
 <div created="20200330160637738" modified="20200331152430631" tags="[[True stories]] [[Monkeys with car keys]]" title="Corona beings">
 <pre>[img[pictures/corona.jpg]]
 
@@ -11698,7 +11714,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20230513210846559" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20230520112613283" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
