--- a/english.html
+++ b/english.html
@@ -9287,7 +9287,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20230520120410003" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20230520120441232" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230520124051768" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9296,7 +9296,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Cooks are dancers]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Jazz's mom]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9316,7 +9316,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230520122617160" title="$:/temp/search">
+<div created="20161023184814872" modified="20230520124047124" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12792,7 +12792,7 @@ In the fifth part of the movie (an hour and 58 minutes into the movie) Jane says
 
  &lt;&lt;heblink [[Jazz]]&gt;&gt;</pre>
 </div>
-<div created="20200215152111069" modified="20200506110850907" tags="[[Here in the Ghetto]] Mothers Metafiction TV Windows" title="Jazz's mom">
+<div created="20200215152111069" modified="20230520124044025" tags="[[Here in the Ghetto]] Mothers Metafiction TV Windows" title="Jazz's mom">
 <pre>[img[pictures/ima-shel-jazz.jpg]]
 
 
@@ -12802,7 +12802,7 @@ It's funny but just not so long ago I found out that [[Jazz's|Jazz]] mother used
 
 
 
- &lt;&lt;heblink [[אימא של ג'אז]]&gt;&gt;
+ &lt;&lt;heblink [[אימא של ג'אזז]]&gt;&gt;
 
 
 </pre>
