--- a/index.html
+++ b/index.html
@@ -12573,8 +12573,7 @@ different tastes, but there were things we both love: family, work, people in al
 </pre>
 </div>
 <div created="20230513210112181" modified="20230513212922571" tags="[[דןדן נסע]] בתים משפחות" title="דןדן חזר">
-<pre>
-[img[pictures/dandanisback.jpg]]
+<pre>[img[pictures/dandanisback.jpg]]
 
 !!![[גורה]]:
 
@@ -14214,9 +14213,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Tarte tatin]]&gt;&gt;</pre>
 </div>
-<div created="20230520112241255" modified="20230520151824009" tags="[[חיות אוכל]] מטבחים אפייה חלונות" title="טבחים הם רקדנים">
-<pre>
-[img[pictures/cooksaredancers.jpg]]
+<div created="20230520112241255" modified="20230521095057329" tags="[[חיות אוכל]] מטבחים אפייה חלונות" title="טבחים הם רקדנים">
+<pre>[img[pictures/cooksaredancers.jpg]]
 
 !!![[גורה]]:
 
