--- a/english.html
+++ b/english.html
@@ -9296,7 +9296,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Jazz's mom]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Cooks are dancers]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9316,7 +9316,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230520124047124" title="$:/temp/search">
+<div created="20161023184814872" modified="20230521095131423" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11019,9 +11019,8 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
  &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
 </div>
-<div created="20230520112454587" modified="20230520113532192" tags="Kitchens Baking [[Food addicts]] [[At the bakery for instance]]" title="Cooks are dancers">
-<pre>
-[img[pictures/cooksaredancers.jpg]]
+<div created="20230520112454587" modified="20230521095138160" tags="Kitchens Baking [[Food addicts]] [[At the bakery for instance]]" title="Cooks are dancers">
+<pre>[img[pictures/cooksaredancers.jpg]]
 
 
 
@@ -11164,8 +11163,7 @@ On June, [[Dandan]] went.
 </pre>
 </div>
 <div created="20230513210658732" modified="20230513210912061" tags="[[Dandan went]] Houses Families" title="Dandan is back">
-<pre>
-[img[pictures/dandanisback.jpg]]
+<pre>[img[pictures/dandanisback.jpg]]
 
 
 
