--- a/index.html
+++ b/index.html
@@ -9384,7 +9384,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[טבחים הם רקדנים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="סוניה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9404,7 +9404,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230520151651826" title="$:/temp/search">
+<div created="20161023184814872" modified="20230615165040646" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -18006,12 +18006,12 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20170331195529688" modified="20200219171729977" tags="[[אחות כהן]] אימהות" title="סוניה">
+<div created="20170331195529688" modified="20230615165719152" tags="[[אחות כהן]] אימהות" title="סוניה">
 <pre>[img[pictures/sonya.jpg]]
 
 !!![[גורה]]:
 
-סוניה המהממת היא אישה הונגריה בת חמשים ושש או שבע. היא [[ומרק|מרק]], בעלה, היגרו לפריז כשהיו כבר בני חמשים, בעקבות שני בניהם. 
+סוניה המהממת היא אישה הונגריה. חלומה של כל אחות!! היא [[ומרק|מרק]], בעלה, היגרו לפריז כשהיו כבר בני חמשים, בעקבות שני בניהם. 
 
 שניהם דיברו צרפתית כשפה שניה מגיל צעיר.
 
