--- a/english.html
+++ b/english.html
@@ -511,6 +511,8 @@ Error message and password prompt
 
 <li>Downton Abbey</li>
 
+<li>Draft of 'Sonia'</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Drinking with Gura</li>
@@ -9296,7 +9298,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Cooks are dancers]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Draft of 'Sonia']] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9316,7 +9318,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230521095131423" title="$:/temp/search">
+<div created="20161023184814872" modified="20230615165820428" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11378,6 +11380,27 @@ She and the hairdresser are the responsible adults in this story.
 
 
  &lt;&lt;heblink [[אחוזת דאונטון]]&gt;&gt;
+</pre>
+</div>
+<div created="20200219171119429" draft.of="Sonia" draft.title="Sonia" modified="20230615165915222" tags="[[Coen sister]] Baking [[Menopause sisters]] [[Cooks are dancers]]" title="Draft of 'Sonia'">
+<pre>[img[pictures/sonya.jpg]]
+
+
+!!![[Gura]]:
+
+Wonderful Sonia is a fifty six or seven Hungarian woman.  She and [[Mark]], her husband, immigrated to Paris when they were already 50 years old, following their two sons.
+
+Both of them spoke French as a second language from a young age. 
+
+She's an amazing cook. On her head there is a giant bun, she's pretty tall and the sweetest in the world. 
+
+For Christmas dinner she made a [[roast beef with potatoes|Roast beef with potatoes]], [[Panettone]] and [[Rigo Jancsi]].
+
+Lately they've started serving [[rice pudding|Rice Pudding]] in [[the Couscous|The Couscous]], which Sonia makes.
+
+ 
+
+ &lt;&lt;heblink [[סוניה]]&gt;&gt;
 </pre>
 </div>
 <div created="20200202160144751" modified="20200810181155806" tags="[[The team]] Children" title="Dreams that we've dreamt">
