apple cake with cream

--- a/english.html
+++ b/english.html
@@ -305,6 +305,8 @@ Error message and password prompt
 
 <li>Another frame from Synecdoche New York</li>
 
+<li>Apple cake with cream</li>
+
 <li>Apple crust</li>
 
 <li>Ariella's path</li>
@@ -9296,7 +9298,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Genevieve [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9316,7 +9318,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230626164845916" title="$:/temp/search">
+<div created="20161023184814872" modified="20230709152302864" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9833,6 +9835,13 @@ She creates cosmetic medical products from natural materials. She produces the m
 
 
  &lt;&lt;heblink [[עוד פריים מסינקדוכה ניו יורק]]&gt;&gt;</pre>
+</div>
+<div created="20230709152126295" modified="20230709152709787" tags="Kitchens Recipes Baking [[Cooks are dancers]] [[Food addicts]]" title="Apple cake with cream">
+<pre>
+[img[pictures/applecakewithcream.jpg]]
+
+
+ &lt;&lt;heblink [[עוגת תפוחים עם קצפת]]&gt;&gt;</pre>
 </div>
 <div created="20200307165831085" modified="20200901072435311" tags="Baking Recipes [[The team]] [[Food addicts]]" title="Apple crust">
 <pre>[img[pictures/apple-crust.jpg]]
@@ -11702,7 +11711,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20230520112613283" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20230709152258564" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
