--- a/index.html
+++ b/index.html
@@ -1295,6 +1295,8 @@ Error message and password prompt
 
 <li>עוגת שזיפים</li>
 
+<li>עוגת תפוחים עם קצפת</li>
+
 <li>עוד פריים מסינקדוכה ניו יורק</li>
 
 <li>עורכת הדין</li>
@@ -9375,7 +9377,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20230520122730020" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20230520124908859" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230709153028511" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9384,7 +9386,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="סוניה [[אווה כהן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגת תפוחים עם קצפת]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9404,7 +9406,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230626164653787" title="$:/temp/search">
+<div created="20161023184814872" modified="20230709152352275" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10883,7 +10885,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230520120641357" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
+<div created="20171216194951924" modified="20230709152751383" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -18912,6 +18914,71 @@ __אופן ההכנה:__
 
 
 &lt;&lt;englink [[Plum cake]]&gt;&gt;</pre>
+</div>
+<div created="20230709151715961" modified="20230709155756618" tags="מתכונים אפייה מטבחים [[טבחים הם רקדנים]] [[חיות אוכל]]" title="עוגת תפוחים עם קצפת">
+<pre>[img[pictures/applecakewithcream.jpg]]
+
+[[אימא של ג'אזז]]:
+
+העוגה הזו עשויה מבצק פריך עשיר, תערובת תפוחים מבושלים ומעוכים לפירה גס, קצפת ופרורים, ואני מאד אוהבת אותה.
+
+
+
+''1. מכינים בצק פריך: ''
+
+במעבד מזון מערבלים עד למשחה חלק:
+
+* 200 גרם חמאה חתוכה לקוביות
+
+* כוס סוכר
+
+מוסיפים:
+ 
+
+* 350 גרם קמח 
+
+* כפית מחוקה של אבקת אפייה
+
+* 2 חלמונים
+
+* 2 כפות שמנת חמוצה
+
+* 1 כפות ברנדי (לא חובה)
+
+וממשיכים לערבל עד לקבלת כדור בצק אחיד. 
+
+משטחים 2/3 מהבצק הפריך בתבנית עגולה (26) או מרובעת (25X25).
+את השליש הנותר משטחים בתבנית נוספת, מרופדת בנייר אפייה.
+
+את שתי התבניות אופים 20-40 דקות תלוי בתנור - עד לזהוב בהיר.
+
+2''. מכינים מלית תפוחים:''
+
+מבשלים עד לרכות:
+
+* 1 קג תפוחי עץ חמוצים מקולפים וחתוכים
+*  כוס סוכר
+* 3 כפות קינמון
+* חצי כוס מיץ לימון
+
+מועכים לפירה גס (בעזרת מועך פירה), ומצננים.
+
+3''. מקציפים שמנת מתוקה'' עם שתי כפות סוכר שטוחות עד לקצפת רכה, ושומרים בקירור עד לשימוש
+
+ 4''. הרכבת העוגה:''
+
+* להניח על הבצק האפוי את התפוחים המבושלים באופן אחיד.
+
+* מעל התפוחים משטחים את הקצפת. בהתחלה מחלקים עם כף באופן שווה ואחר כך מחליקים עם מרית.
+
+* מפוררים את שליש הבצק האפוי ומפזרים באחידות מעל הקצפת
+
+''*מקררים לפחות 6 שעות.''
+
+
+
+&lt;&lt;englink [[Apple cake with cream]]&gt;&gt;
+</pre>
 </div>
 <div created="20211226171000544" modified="20211226175128461" tags="בתים מטבחים סרטים" title="עוד פריים מסינקדוכה ניו יורק">
 <pre>[img[pictures/anotherframefrom.jpg]]
