--- a/index.html
+++ b/index.html
@@ -1265,6 +1265,8 @@ Error message and password prompt
 
 <li>ספירל</li>
 
+<li>סקייט פארק בפוטסדאם</li>
+
 <li>סרטים</li>
 
 <li>סתיו</li>
@@ -9386,7 +9388,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגת תפוחים עם קצפת]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סקייט פארק בפוטסדאם]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10885,7 +10887,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230709152751383" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
+<div created="20171216194951924" modified="20230717103406916" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -18295,6 +18297,13 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[Spiral]]&gt;&gt;</pre>
+</div>
+<div created="20230717103251264" modified="20230717103601081" tags="[[בדרך לאן שהוא]] [[אחיות חוץ]]" title="סקייט פארק בפוטסדאם">
+<pre>
+
+[img[pictures/skateparkinpotsdam.jpg]]
+
+&lt;&lt;englink [[Skate park in Potsdam]]&gt;&gt;</pre>
 </div>
 <div created="20190126100956225" modified="20200404171448846" tags="חבר [[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] סגירים [[הלכות קורונה]]" title="סרטים">
 <pre>[img[pictures/sratim.jpg]]
