--- a/index.html
+++ b/index.html
@@ -9379,7 +9379,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20230520122730020" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20230709153028511" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230717104232411" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -10887,7 +10887,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230717103406916" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
+<div created="20171216194951924" modified="20230717103908298" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -18298,10 +18298,14 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Spiral]]&gt;&gt;</pre>
 </div>
-<div created="20230717103251264" modified="20230717103601081" tags="[[בדרך לאן שהוא]] [[אחיות חוץ]]" title="סקייט פארק בפוטסדאם">
+<div created="20230717103251264" modified="20230717104229800" tags="[[בדרך לאן שהוא]] [[אחיות חוץ]]" title="סקייט פארק בפוטסדאם">
 <pre>
 
 [img[pictures/skateparkinpotsdam.jpg]]
+
+[[אימא של ג'אזז]]:
+
+בסתיו שעבר, לפני כמעט שנה, פרנזי, חברה של [[ג'אזז|Jazz]], שאלה אם אוכל לצייר את הסקייטפארק שהרסו לחברה ולאחיו וזה שניהם שרוקדים יחדיו איש איש על סקייטו.
 
 &lt;&lt;englink [[Skate park in Potsdam]]&gt;&gt;</pre>
 </div>
