--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,8 @@ Error message and password prompt
 
 <li>מתכונים טבעוניים</li>
 
+<li>מתכוננים</li>
+
 <li>מתפללים בגינת בילו</li>
 
 <li>נאמני הגנזך</li>
@@ -9388,7 +9390,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פאי נקטרין]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="מתכוננים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9408,7 +9410,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230729121943383" title="$:/temp/search">
+<div created="20161023184814872" modified="20231018163942361" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10887,7 +10889,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230717103908298" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
+<div created="20171216194951924" modified="20231018163701476" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12576,14 +12578,14 @@ different tastes, but there were things we both love: family, work, people in al
 &lt;&lt;englink [[Dandan]]&gt;&gt;
 </pre>
 </div>
-<div created="20230513210112181" modified="20230513212922571" tags="[[דןדן נסע]] בתים משפחות" title="דןדן חזר">
+<div created="20230513210112181" modified="20230815184033517" tags="[[דןדן נסע]] בתים משפחות" title="דןדן חזר">
 <pre>[img[pictures/dandanisback.jpg]]
 
 !!![[גורה]]:
 
 לא ראינו את דןדן למעלה מ6! שנים.
 לפני חודש קיבלתי ממנו מייל בו הוא מספר, בנימוס רב, ושואל אם זה בסדר שהוא יבוא לבקר בקרוב. אמרתי לו שזה בסדר.  
-לפני יומיים הוא הגיע, הוחלט כי אני אהיה זו שתפתח לו את הדלת, הוא לבש סווטשירט כמו [[בקופנהגן קאובוי|https://www.lemonde.fr/en/culture/article/2023/01/05/in-copenhagen-cowboy-nicolas-winding-refn-creates-an-enigmatic-superheroine_6010366_30.html]], עמדתי כמו קלוצית, הוא היה נבוך וחייך, התחבקנו רגע והמשכנו פנימה כי כולם כבר חיכו לו.
+לפני יומיים הוא הגיע, הוחלט כי אני אהיה זו שתפתח לו את הדלת, הוא לבש סווטשירט כמו [[בקופנהגן קאובוי|https://www.lemonde.fr/en/culture/article/2023/01/05/in-copenhagen-cowboy-nicolas-winding-refn-creates-an-enigmatic-superheroine_6010366_30.html]], עמדתי כמו קלוצית, הוא היה נבוך וחייך, התחבקנו רגע והמשכנו פנימה.
 
 
 &lt;&lt;englink [[Dandan is back]]&gt;&gt;
@@ -17660,6 +17662,13 @@ We rise to play a greater part.
 
 
 </pre>
+</div>
+<div created="20231018162626685" modified="20231018163954013" tags="ארוחות [[בדרך לאן שהוא]] בתים עצים [[חיות אוכל]] [[חלומות שחלמנו]]" title="מתכוננים">
+<pre>
+[img[pictures/gettingready.jpg]]
+
+
+&lt;&lt;englink [[Getting ready]]&gt;&gt;</pre>
 </div>
 <div created="20200429135615053" modified="20230520124606433" tags="[[כאן בגטו]] [[הלכות קורונה]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]] עצים" title="מתפללים בגינת בילו">
 <pre>[img[pictures/bilugarden.jpg]]
